MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>Identifies whether the account is categorized as an Organization or a Person based on the record type for Reports and Segmentation</description>
    <formula>IF(
  OR(
    RecordType.Name = &quot;Organization Account&quot;,
    RecordType.Name = &quot;Broker Agency&quot;
  ),
  &quot;Organization&quot;,
  IF(
    RecordType.Name = &quot;Person Account&quot;,
    &quot;Person&quot;,
    &quot;Unknown&quot;
  )
)</formula>
    <label>Account Category</label>
    <type>Text</type>
</CustomField>