MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Account_First_Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Account_First_Name_in_Arabic__c</fullName>
    <formula>IF(
    CONTAINS(TRIM(Account_Name_in_Arabic__c), &quot; &quot;),
    LEFT(
        TRIM(Account_Name_in_Arabic__c),
        FIND(&quot; &quot;, TRIM(Account_Name_in_Arabic__c)) - 1
    ),
    TRIM(Account_Name_in_Arabic__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account First Name in Arabic</label>
    <type>Text</type>
</CustomField>