MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Account_Last_Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Name_in_Arabic__c</fullName>
    <formula>IF(
    CONTAINS(TRIM(Account_Name_in_Arabic__c), &quot; &quot;),
    TRIM(
        RIGHT(
            SUBSTITUTE(TRIM(Account_Name_in_Arabic__c), &quot; &quot;, LPAD(&quot; &quot;, 100)),
            100
        )
    ),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Name in Arabic</label>
    <type>Text</type>
</CustomField>