MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Account_Middle_Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Account_Middle_Name_in_Arabic__c</fullName>
    <formula>IF(
    LEN(TRIM(Account_Name_in_Arabic__c)) - LEN(SUBSTITUTE(TRIM(Account_Name_in_Arabic__c), &quot; &quot;, &quot;&quot;)) &gt;= 2,
    TRIM(
        MID(
            TRIM(Account_Name_in_Arabic__c),
            FIND(&quot; &quot;, TRIM(Account_Name_in_Arabic__c)) + 1,
            LEN(TRIM(Account_Name_in_Arabic__c))
            - LEN(TRIM(RIGHT(SUBSTITUTE(TRIM(Account_Name_in_Arabic__c), &quot; &quot;, LPAD(&quot; &quot;, 100)), 100)))
            - FIND(&quot; &quot;, TRIM(Account_Name_in_Arabic__c))
            - 1
        )
    ),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Middle Name in Arabic</label>
    <type>Text</type>
</CustomField>