MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id ,  Name )</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>