MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/AccountID_EncryptedId__c.field-meta.xml
<CustomField>
    <fullName>AccountID_EncryptedId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountID EncryptedId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>