MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/AccountnameArabic__c.field-meta.xml
<CustomField>
    <fullName>AccountnameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountnameArabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>