MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>