MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/AddressFormula__c.field-meta.xml
<CustomField>
    <fullName>AddressFormula__c</fullName>
    <formula>TRIM(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
(IF(NOT(ISBLANK(PersonMailingStreet)), PersonMailingStreet&amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(PersonMailingCity)), PersonMailingCity&amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(PersonMailingState)), PersonMailingState&amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(PersonMailingPostalCode)), PersonMailingPostalCode&amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(PersonMailingCountry)), PersonMailingCountry, &quot;&quot;)
),
&quot;, ,&quot;, &quot;,&quot;),
&quot;, ,&quot;, &quot;,&quot;),
&quot;, ,&quot;, &quot;,&quot;),
&quot;, ,&quot;, &quot;,&quot;),CASESAFEID(Id),&quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddressFormula</label>
    <type>Text</type>
</CustomField>