MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Agency_Region__c.field-meta.xml
<CustomField>
    <fullName>Agency_Region__c</fullName>
    <formula>IF(BillingCountry  = &apos;United Arab Emirates&apos;, &apos;Domestic&apos;, &apos;International&apos;)</formula>
    <label>Agency Region</label>
    <type>Text</type>
</CustomField>