MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Broker_Agency_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Registration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Agency Registration Date</label>
    <type>Date</type>
</CustomField>