MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Call_Phone__c.field-meta.xml
<CustomField>
    <fullName>Call_Phone__c</fullName>
    <formula>IF(
  OR(
    RecordType.Name = &apos;Organization Account&apos;,
    RecordType.Name = &apos;Broker Agency&apos;
  ),
LEFT(Phone, 4) &amp;&quot;*********&quot; &amp; RIGHT(Phone, 2),
LEFT(PersonMobilePhone, 4) &amp;&quot;*********&quot; &amp; RIGHT(PersonMobilePhone, 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Phone</label>
    <type>Text</type>
</CustomField>