MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/City_FF__c.field-meta.xml
<CustomField>
    <fullName>City_FF__c</fullName>
    <formula>IF( ISNULL(PersonMailingCity) ,   IF( ISNULL(BillingCity) ,   ShippingCity  , BillingCity) , PersonMailingCity)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>