MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Commercial_Registration_Office_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Registration_Office_Arabic__c</fullName>
    <description>This field will contain the organization account&apos;s Commercial Registration Office Branch in Arabic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commercial Registration Office Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>