MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Company_Type_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_Arabic__c</fullName>
    <description>This field will contain company type value in arabic.</description>
    <label>Company Type Arabic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>