MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Compliance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compliance Approval Date</label>
    <type>Date</type>
</CustomField>