MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Compliance_Expire_Batch__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Expire_Batch__c</fullName>
    <formula>Compliance_Expiry_Date__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Expire Batch</label>
    <type>Checkbox</type>
</CustomField>