MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Country_FF__c.field-meta.xml
<CustomField>
    <fullName>Country_FF__c</fullName>
    <formula>IF( ISNULL(PersonMailingCountry), IF( ISNULL(BillingCountry), ShippingCountry, BillingCountry), PersonMailingCountry)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>