MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VVIP</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Royal Family / Royal Household</fullName>
            </value>
            <value>
                <fullName>Government / Government-Linked</fullName>
            </value>
            <value>
                <fullName>Board / Executive Leadership</fullName>
            </value>
            <value>
                <fullName>High-Profile / Public Figure</fullName>
            </value>
            <value>
                <fullName>Strategic / Key Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>