MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Customer_Defaulted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Defaulted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Defaulted</label>
    <type>Checkbox</type>
</CustomField>