MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Customer_MID__c.field-meta.xml
<CustomField>
    <fullName>Customer_MID__c</fullName>
    <formula>IF(Formaul_Number__c =null,NumberPC__c,Formaul_Number__c+&apos;-&apos;+NumberPC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer MID</label>
    <type>Text</type>
</CustomField>