MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Customer_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Customer_Nationality__c</fullName>
    <formula>TEXT(PersonContact.Nationality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Nationality</label>
    <type>Text</type>
</CustomField>