MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <displayFormat>CUST-{000000000}</displayFormat>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>