MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <formula>IF(
    ISBLANK(Total_Sold_Value__c), &quot;&quot;,
IF(
    Total_Sold_Value__c &lt; 4000000, &quot;Premier&quot;,
IF(
    Total_Sold_Value__c &lt; 11000000, &quot;Privilege&quot;,
IF(
    Total_Sold_Value__c &lt; 25000000, &quot;Prestige&quot;,
IF(
    Total_Sold_Value__c &lt; 45000000, &quot;Executive&quot;,
    &quot;Exclusive&quot;
)))))</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>