MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/EBS_VENDOR_ADDRESS_ID__c.field-meta.xml
<CustomField>
    <fullName>EBS_VENDOR_ADDRESS_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS VENDOR ADDRESS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>