MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Eligible_For_Merge__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible For Merge</label>
    <type>Checkbox</type>
</CustomField>