MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>House Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>