MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/En_Proposed_VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>En_Proposed_VAT_Registration_Number__c</fullName>
    <label>Proposed VAT Registration Number</label>
    <length>15</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>