MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/En_UAEVATRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>En_UAEVATRegisterNumber__c</fullName>
    <label>UAE VAT Register Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>