MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/IBAN_Number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>