MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Invited_Event__c.field-meta.xml
<CustomField>
    <fullName>Invited_Event__c</fullName>
    <label>Invited Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wadeem Sales Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>