MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Is_Broker_Agency_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Broker_Agency_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Broker Agency Blocked?</label>
    <type>Checkbox</type>
</CustomField>