MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Is_Employee_Payment_Plan_Applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee_Payment_Plan_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee Payment Plan Applied</label>
    <type>Checkbox</type>
</CustomField>