MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Is_Trade_License_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Trade_License_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trade License Uploaded</label>
    <type>Checkbox</type>
</CustomField>