MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/KYC_Expiry_Time_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>KYC_Expiry_Time_in_Seconds__c</fullName>
    <label>KYC Expiry Time in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>