MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/KYC_Link_Expiry_At__c.field-meta.xml
<CustomField>
    <fullName>KYC_Link_Expiry_At__c</fullName>
    <formula>KYC_Send_Date_Time__c + (KYC_Expiry_Time_in_Seconds__c/ 86400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Link Expiry At</label>
    <type>DateTime</type>
</CustomField>