MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/KYC_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Link_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Link Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>