MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Legal_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>