MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Mailing_Country_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>