MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Masked_EmiratesId__c.field-meta.xml
<CustomField>
    <fullName>Masked_EmiratesId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmiratesId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>