MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Masked_Phone__c.field-meta.xml
<CustomField>
    <fullName>Masked_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>