MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Merge_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Merge_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>