MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/NumberPC__c.field-meta.xml
<CustomField>
    <fullName>NumberPC__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>NumberPC</label>
    <type>AutoNumber</type>
</CustomField>