MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/OIC_Bank_Response__c.field-meta.xml
<CustomField>
    <fullName>OIC_Bank_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC Bank Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>