MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/OIC_Supplier_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>OIC_Supplier_Sync_Status__c</fullName>
    <label>OIC Supplier Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>