MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/OIC_Supplier_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>OIC_Supplier_Vendor_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC Supplier Vendor ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>