MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Oracle_Account_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_Contact_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Account Contact Status</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>