MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/OtherLegalStructure__c.field-meta.xml
<CustomField>
    <fullName>OtherLegalStructure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Legal Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>