MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Passfort_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Passfort_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passfort Approval Date</label>
    <type>Date</type>
</CustomField>