MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/PassfortRiskStatus__c.field-meta.xml
<CustomField>
    <fullName>PassfortRiskStatus__c</fullName>
    <label>Passfort Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>