MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/POA_Issued_by__c.field-meta.xml
<CustomField>
    <fullName>POA_Issued_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Issued by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>