MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/POAAuthorizationNo__c.field-meta.xml
<CustomField>
    <fullName>POAAuthorizationNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Authorization No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>