MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/POARegistrationAuthority__c.field-meta.xml
<CustomField>
    <fullName>POARegistrationAuthority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Registration Authority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>