MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/POARepresentationType__c.field-meta.xml
<CustomField>
    <fullName>POARepresentationType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA_Representation Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>