MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Primary_Contact_Residence_Status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Residence_Status__c</fullName>
    <label>Primary Contact Residence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>