MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Proposed_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Bank_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>